--- a/SistemaAcademicoweb-listar-consultar/src/main/webapp/html/consultar.html
+++ b/SistemaAcademicoweb-listar-consultar/src/main/webapp/html/consultar.html
@@ -8,21 +8,30 @@
 
 <body>
 	<form action="../ServletAluno?cmd=con" method="post">
+		
 		<table border="1">
-			<tr>
-				<th colspan="2">
-					<h2>Consultar Alunos</h2>
-				</th>
-			</tr>
-			<tr>
-				<td>RA do Aluno:</td>
-				<td><input type="text" name="txtRa" size="10" /></td>
-			</tr>
-			<tr>
-				<th colspan="2"><input type="submit" value="Enviar"></th>
-				<th colspan="2"><a href="../index.html">Página Inicial</a></th>
-			</tr>
-		</table>
+			<center>
+				<tr>
+					<th colspan="2">
+						<h2>Consultar Alunos</h2>
+					</th>
+				</tr>
+				<tr>
+					<td>RA do Aluno:</td>
+					<td><input type="text" name="txtRa" size="10" /></td>
+				</tr>
+				<tr>
+					
+					<th colspan="2"><input type="submit" value="Enviar"></th>
+					
+				</tr>
+				<tr>
+					<th colspan="2"><a href="../index.html">Página Inicial</a></th>
+				</tr>
+			</center>
+		</table>	
+		
+		
 	</form>
 </body>
 
