--- a/SistemaAcademicoweb-listar-consultar/src/main/webapp/html/excluir.html
+++ b/SistemaAcademicoweb-listar-consultar/src/main/webapp/html/excluir.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Sistema Acadêmico</title>
+	<meta charset="UTF-8">
+	<title>Sistema Acadêmico</title>
 </head>
+
 <body>
-<form action="../ServletAluno?cmd=exc" method="post">
-<table border="1">
-<tr>
-<th colspan="2"><h2>Excluir Aluno</h2></th>
-</tr>
-<tr>
-<td>RA do Aluno:</td>
-<td><input type="text" name="txtRa" size="10" /></td>
-</tr>
-<tr>
-<th colspan="2"><input type="submit" value="Enviar"></th>
-</tr>
-</table>
-</form>
+	<form action="../ServletAluno?cmd=exc" method="post">
+
+		<center>
+			<table border="1">
+				<tr>
+					<th colspan="2">
+						<h2>Excluir Aluno</h2>
+					</th>
+				</tr>
+				<tr>
+					<td>RA do Aluno:</td>
+					<td><input type="text" name="txtRa" size="10" /></td>
+				</tr>
+				<tr>
+					<th colspan="2"><input type="submit" value="Enviar"></th>
+				</tr>
+			</table>
+		</center>
+
+	</form>
 </body>
+
 </html>
