--- a/SistemaAcademicoweb-listar-consultar/src/main/webapp/html/incluir.html
+++ b/SistemaAcademicoweb-listar-consultar/src/main/webapp/html/incluir.html
@@ -1,46 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Sistema Acadêmico</title>
+	<meta charset="UTF-8">
+	<title>Sistema Acadêmico</title>
+	
+	
+	<!-- css bootstrap-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+	<!-- js bootstrap -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+		crossorigin="anonymous"></script>
+
 </head>
+
 <body>
-<form action="../ServletAluno" method="get">
-<table border="1">
-<input type="hidden" name="cmd" value="incluir">
-<tr><th colspan="2"><h1>Cadastro de Alunos</h1></th></tr>
-<tr>
-<td>RA:</td>
-<td><input type="text" name="txtRa" size="60" /></td>
-</tr>
-<tr>
-<td>Nome:</td>
-<td><input type="text" name="txtNome" size="60" /></td>
-</tr>
-<tr>
-<td>E-mail:</td>
-<td><input type="email" size="60" name="txtEmail" /></td>
-</tr>
-<tr>
-<td>Endereço:</td>
-<td><input type="text" size="60" name="txtEndereco" /></td>
-</tr>
-<tr>
-<td>Data de Nascimento:</td>
-<td><input type="date" size="10" name="txtData" /></td>
-</tr>
-<tr>
-<td>Período</td>
-<td><select size="1" name="cmbPeriodo">
-<option>Manhã</option>
-<option>Tarde</option>
-<option>Noite</option>
-</select></td>
-</tr>
-<tr>
-<td colspan="2" align="center"><input type="submit" value="Enviar"></td>
-</tr>
-</table>
-</form>
+	<div class="container-fluid">
+		<form action="../ServletAluno" method="get">
+			<table border="1">
+				<input type="hidden" name="cmd" value="incluir">
+				<tr>
+					<th colspan="2">
+						<h1>Cadastro de Alunos</h1>
+					</th>
+				</tr>
+				<tr>
+					<td>RA:</td>
+					<td><input type="text" name="txtRa" size="60" /></td>
+				</tr>
+				<tr>
+					<td>Nome:</td>
+					<td><input type="text" name="txtNome" size="60" /></td>
+				</tr>
+				<tr>
+					<td>E-mail:</td>
+					<td><input type="email" size="60" name="txtEmail" /></td>
+				</tr>
+				<tr>
+					<td>Endereço:</td>
+					<td><input type="text" size="60" name="txtEndereco" /></td>
+				</tr>
+				<tr>
+					<td>Data de Nascimento:</td>
+					<td><input type="date" size="10" name="txtData" /></td>
+				</tr>
+				<tr>
+					<td>Período</td>
+					<td><select size="1" name="cmbPeriodo">
+							<option>Manhã</option>
+							<option>Tarde</option>
+							<option>Noite</option>
+						</select></td>
+				</tr>
+				<tr>
+					<td colspan="2" align="center"><input type="submit" value="Enviar"></td>
+					<td><a href="../index.html">Página Inicial</a></td>
+				</tr>
+			</table>
+		</form>
+	</div>
 </body>
+
 </html>
