--- a/SistemaAcademicoweb-listar-consultar/src/main/webapp/index.html
+++ b/SistemaAcademicoweb-listar-consultar/src/main/webapp/index.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Sistema Acadêmico</title>
-	
+
 	<!-- css do projeto -->
-	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 
 	<!-- css bootstrap-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,41 +16,41 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 		crossorigin="anonymous"></script>
-	
+
 	<style>
-		
-		body{
-			background-image: url(images/teste.png);
+		body {
+			background-image: url(images/backgroud_image.jpg);
 		}
-		
 	</style>
-	
+
 </head>
 
 <body>
-	<nav class="navbar bg-body-tertiary">
-		<div class="container-fluid">
-			<a class="navbar-brand"> <img src="images/thanks_icon.png" alt="Logo" width="30" height="24"	class="d-inline-block align-text-top"> Sistema Acadêmico </a>
-		</div>
-	</nav>
+	<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
 	
-	<ul class="nav justify-content-center">
-		<li class="nav-item">
-			<a class="nav-link" aria-disabled="true" href="html\incluir.html">Incluir Aluno</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" aria-disabled="true" href="html\atualizar.html">Alterar Alunos</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" aria-disabled="true" href="html\excluir.html">Excluir Alunos</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" aria-disabled="true" href="html\consultar.html">Consultar Alunos</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" aria-disabled="true" href="ServletAluno?cmd=listar">Listar todos</a>
-		</li>
-	</ul>
+		<div class="container-fluid">
+			<a class="navbar-brand">
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-laptop"
+					viewBox="0 0 16 16">
+					<path
+						d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z" />
+				</svg>
+			</a>
+
+			<ul class="nav">
+
+				<li class="nav-item">
+					<a class="nav-link" aria-disabled="true" href="html\incluir.html">Incluir Aluno</a>
+				</li>
+				
+				<li class="nav-item">
+					<a class="nav-link" aria-disabled="true" href="ServletAluno?cmd=listar">Listar todos</a>
+				</li>
+				
+			</ul>
+	</nav>
+
+
 
 </body>
 
